--- a/views/home.html
+++ b/views/home.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Welcome!</title>
+    <title>¡BienVenidos!</title>
     <link rel="stylesheet" href="styles.css" />
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
@@ -13,7 +13,7 @@
     <nav class="bg-white shadow text-white gradient-iron">
       <div class="container mx-auto px-4">
         <div class="flex justify-between items-center py-4">
-          <div class="text-xl font-bold">My Portfolio</div>
+          <div class="text-xl font-bold">Mi Cartera</div>
           <ul class="flex space-x-4">
             <li>
               <a href="/blog" class="hover:text-blue-500">Blog</a>
@@ -26,7 +26,7 @@
               >
             </li>
             <li>
-              <a href="https://github.com" class="hover:text-blue-500"
+              <a href="https://github.com/Rafael-Goncalo" class="hover:text-blue-500"
                 >GitHub</a
               >
             </li>
@@ -40,25 +40,16 @@
       <section class="flex flex-wrap -mx-4">
         <div class="mt-10 flex flex-col md:flex-row items-center">
           <img
-            src="/profile.png"
-            alt="Your Name"
+            src="/mypic.png"
+            alt="Rafael G."
             class="rounded-full w-48 h-48 md:mr-8"
           />
           <div>
-            <h2 class="text-2xl font-bold mb-4">About Me</h2>
+            <h2 class="text-2xl font-bold mb-4">Sobre mi</h2>
             <p class="text-gray-600">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus
-              lacinia odio vitae vestibulum. Donec in efficitur leo. Vestibulum
-              nec magna ac dui tempus vestibulum. Curabitur facilisis, nulla vel
-              venenatis auctor, leo magna sodales felis, quis malesuada nibh
-              odio ut velit. Proin pharetra luctus enim, sit amet cursus quam
-              semper a. Mauris eu ante vitae eros faucibus aliquam. Sed ornare
-              gravida arcu, id placerat risus lacinia at. Integer accumsan
-              ligula ante, non feugiat neque ullamcorper vel. Nullam a erat nec
-              nisl condimentum fermentum at sed massa. Fusce non risus eu arcu
-              placerat porttitor. Mauris fermentum velit vel congue luctus. Sed
-              cursus orci at porta ornare. Donec sit amet aliquet tellus, a
-              ornare justo. Donec tempus tincidunt leo id tincidunt.
+              Yo soy español español español Yo soy español español español Yo soy español español español
+              Yo soy español español español Yo soy español español español Yo soy español español español
+              Yo soy de dónde me de la ganáh 💃🏻
             </p>
           </div>
         </div>
@@ -66,7 +57,7 @@
 
       <!-- My Projects Section -->
       <section class="mt-10">
-        <h2 class="text-2xl font-bold">My Projects</h2>
+        <h2 class="text-2xl font-bold">Mis Proyectos</h2>
         <div
           id="projectsContainer"
           class="mt-4 grid gap-4 grid-cols-1 md:grid-cols-2 lg:grid-cols-3"
@@ -80,7 +71,7 @@
     <footer class="gradient-footer bg-gray-800 text-white py-4 mt-10">
       <div class="container mx-auto text-center">
         <p class="text-xl font-medium">LAB | Express Basic Server</p>
-        <p class="mt-2 opacity-70 text-sm">© 2023 Ironhack</p>
+        <p class="mt-2 opacity-70 text-sm">© 2025 Rafael G Inc.</p>
       </div>
     </footer>
 
